--- a/src/main/resources/templates/mypage/changePw.html
+++ b/src/main/resources/templates/mypage/changePw.html
@@ -99,7 +99,7 @@
                                 </div>
 
 
-                                <button id="changePwBtn" class="btn btn-primary btn-md" type="submit"
+                                <button id="changePassword" class="btn btn-primary btn-md" type="submit"
                                         onclick="changePassword()"> 변경하기
                                 </button>
                                 <button class="btn btn-primary2" id="saveCancel" onclick="cancel()">취소</button>
@@ -118,48 +118,59 @@
         window.location.href = '/review';
     }
 
+    document.getElementById('changePassword').addEventListener('click', function(event) {
+        let reg_pw = /^(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#$%^*+=-])(?=.*[0-9]).{8,15}$/;
+        let currentPassword = document.getElementsByName("currentPw")[0].value;
+        let newPassword = document.getElementsByName("newPw")[0].value;
+        let newPasswordConfirm = document.getElementsByName("newPwConfirm")[0].value;
 
-    // 성공 메시지가 표시될 때 폼을 숨기고, 성공 메시지를 보여준다.
-    var successMessage = document.getElementById("successMessage");
-    var formContainer = document.getElementById("formContainer");
+        // 공백 및 빈 문자열 체크
+        if (currentPassword === "" || newPassword === "" || newPasswordConfirm === "") {
+            alert("모든 항목을 입력해주세요.");
+            event.preventDefault(); // 폼 제출 막기
+            return false;
+        }
+        // 유효성 검사
+        else if (!reg_pw.test(newPassword)) {
+            alert("비밀번호는 8~16자리수여야 합니다. 영문 대문자, 소문자, 숫자, 특수문자를 1개 이상 포함해야 합니다.");
+            event.preventDefault(); // 폼 제출 막기
+            console.log(event.target);
+            document.getElementsByName('newPw')[0].focus();
+            return false;
+        }
 
-    if (successMessage) {
-        formContainer.style.display = "none";
-    }
+        else if (currentPassword === newPassword){
+            alert("현재 비밀번호와 같습니다.");
+            event.preventDefault(); // 폼 제출 막기
+            return false;
+        }
 
-    function changePassword() {
+        const confirmCheck = confirm("수정하시겠습니까?");
 
-        var reg_pw = /^(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#$%^*+=-])(?=.*[0-9]).{8,15}$/; // 비밀번호 정규식 추가
-        var currentPassword = document.getElementById("currentPw").value;
-        var newPassword = document.getElementById("newPw").value;
-        var newPasswordConfirm = document.getElementById("newPwConfirm").value;
-
-        // AJAX 요청 보내기
-        $.ajax({
-            type: "POST",
-            url: "/mypage/changePw",
-            data: {
-                currentPw: currentPassword,
-                newPw: newPassword,
-                newPwConfirm: newPasswordConfirm
-            },
-            success: function (response) {
-                // 서버로부터의 성공 응답 처리
-                // 여기에 성공 메시지 표시 등의 동작 추가
-                console.log(response);
-                alert(response);
-                window.location.href = '/review';
-            },
-            error: function (xhr, status, error) {
-                // 서버로부터의 오류 응답 처리
-                // 여기에 오류 메시지 표시 등의 동작 추가
-                console.log("오류가 발생했습니다: " + error);
-                // alert("오류가 발생했습니다: " + error);
-            }
-        });
+        if (confirmCheck == true) {
+            // AJAX 요청 보내기
+            $.ajax({
+                type: "POST",
+                url: "/mypage/changePw",
+                data: {
+                    currentPw: currentPassword,
+                    newPw: newPassword,
+                    newPwConfirm: newPasswordConfirm
+                },
+                success: function (response) {
+                    console.log(response);
+                    alert(response);
+                    window.location.href = '/review';
+                },
+                error: function (xhr, status, error) {
+                    // 서버로부터의 오류 응답 처리
+                    console.log("오류가 발생했습니다: " + error);
+                }
+            });
 
 
-    }
+        }
+    })
 
 
 </script>
