240326 비밀번호 이메일로 보내기 및 비밀번호 찾기 수정.

--- a/src/main/resources/templates/mypage/changePw.html
+++ b/src/main/resources/templates/mypage/changePw.html
@@ -60,7 +60,7 @@
                     <!-- 비밀번호 변경타이틀부분 -->
                     <div id="header">
                         <h1 class="text-center">
-                            비밀번호 변경(1단계)
+                            비밀번호 변경
                         </h1>
                         <p class="text-center">비밀번호 변경 페이지입니다.</p>
                     </div>
