--- a/src/main/resources/templates/mypage/changePw.html
+++ b/src/main/resources/templates/mypage/changePw.html
@@ -52,62 +52,58 @@
          margin-bottom: 3em;">
         </div>
 
-
         <div id="wrap" class="container position-relative pb-5 changePwdiv">
-            <form id="changePwForm" action="/mypage/changePw" method="post">
-                <div class="form-group userInput mb-5">
+            <div class="form-group userInput mb-5">
 
-                    <!-- 비밀번호 변경타이틀부분 -->
-                    <div id="header">
-                        <h1 class="text-center">
-                            비밀번호 변경
-                        </h1>
-                        <p class="text-center">비밀번호 변경 페이지입니다.</p>
-                    </div>
+                <!-- 비밀번호 변경타이틀부분 -->
+                <div id="header">
+                    <h1 class="text-center">
+                        비밀번호 변경
+                    </h1>
+                    <p class="text-center">비밀번호 변경 페이지입니다.</p>
+                </div>
 
-                    <!-- 성공 메시지를 표시 -->
-                    <div id="successMessage" th:if="${data}" class="alert alert-success">
-                        <p th:text="${data.message}"></p>
-                    </div>
+                <!-- 성공 메시지를 표시 -->
+                <div id="successMessage" th:if="${data}" class="alert alert-success">
+                    <p th:text="${data.message}"></p>
+                </div>
 
-                    <div id="container">
-                        <div class="row_group">
-                            <div class="userInput mb-5">
-                                <h4 class="list">현재 비밀번호</h4>
+                <div id="container">
+                    <div class="row_group">
+                        <div class="userInput mb-5">
+                            <h4 class="list">현재 비밀번호</h4>
 
-                                <div class="input-group">
-                                    <!-- 현재 비밀번호 -->
-                                    <input type="password" name="currentPw" id="currentPw"
-                                           class="form-control form-control-sm" maxlength="20"
-                                           placeholder="현재 비밀번호를 입력하세요."/>
-                                </div>
-
-                                <h4 class="list">새 비밀번호</h4>
-
-                                <div class="input-group">
-                                    <!-- 새 비밀번호 -->
-                                    <input type="password" name="newPw" id="newPw" class="form-control form-control-sm"
-                                           maxlength="20" placeholder="새 비밀번호를 입력하세요."/>
-                                </div>
-
-                                <h4 class="list">새 비밀번호 확인</h4>
-                                <div class="input-group">
-                                    <!-- 새 비밀번호 확인 -->
-                                    <input type="password" name="newPwConfirm" id="newPwConfirm"
-                                           class="form-control form-control-sm" maxlength="20"
-                                           placeholder="새 비밀번호 한 번 더 입력해주세요."/>
-                                </div>
-
-
-                                <button id="changePassword" class="btn btn-primary btn-md" type="submit"
-                                        onclick="changePassword()"> 변경하기
-                                </button>
-                                <button class="btn btn-primary2" id="saveCancel" onclick="cancel()">취소</button>
+                            <div class="input-group">
+                                <!-- 현재 비밀번호 -->
+                                <input type="password" name="currentPw" id="currentPw"
+                                       class="form-control form-control-sm" maxlength="20"
+                                       placeholder="현재 비밀번호를 입력하세요."/>
                             </div>
+
+                            <h4 class="list">새 비밀번호</h4>
+
+                            <div class="input-group">
+                                <!-- 새 비밀번호 -->
+                                <input type="password" name="newPw" id="newPw" class="form-control form-control-sm"
+                                       maxlength="20" placeholder="새 비밀번호를 입력하세요."/>
+                            </div>
+
+                            <h4 class="list">새 비밀번호 확인</h4>
+                            <div class="input-group">
+                                <!-- 새 비밀번호 확인 -->
+                                <input type="password" name="newPwConfirm" id="newPwConfirm"
+                                       class="form-control form-control-sm" maxlength="20"
+                                       placeholder="새 비밀번호 한 번 더 입력해주세요."/>
+                            </div>
+
+
+                            <button id="changePassword" class="btn btn-primary btn-md" onclick="changePassword()"> 변경하기
+                            </button>
+                            <button class="btn btn-primary2" id="saveCancel" onclick="cancel()">취소</button>
                         </div>
                     </div>
                 </div>
-            </form>
+            </div>
         </div>
     </div>
 </div>
@@ -118,7 +114,7 @@
         window.location.href = '/review';
     }
 
-    document.getElementById('changePassword').addEventListener('click', function(event) {
+    let changePassword = function (){
         let reg_pw = /^(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#$%^*+=-])(?=.*[0-9]).{8,15}$/;
         let currentPassword = document.getElementsByName("currentPw")[0].value;
         let newPassword = document.getElementsByName("newPw")[0].value;
@@ -127,21 +123,16 @@
         // 공백 및 빈 문자열 체크
         if (currentPassword === "" || newPassword === "" || newPasswordConfirm === "") {
             alert("모든 항목을 입력해주세요.");
-            event.preventDefault(); // 폼 제출 막기
             return false;
-        }
-        // 유효성 검사
+        } // 유효성 검사
         else if (!reg_pw.test(newPassword)) {
             alert("비밀번호는 8~16자리수여야 합니다. 영문 대문자, 소문자, 숫자, 특수문자를 1개 이상 포함해야 합니다.");
-            event.preventDefault(); // 폼 제출 막기
             console.log(event.target);
             document.getElementsByName('newPw')[0].focus();
             return false;
         }
-
         else if (currentPassword === newPassword){
             alert("현재 비밀번호와 같습니다.");
-            event.preventDefault(); // 폼 제출 막기
             return false;
         }
 
@@ -151,7 +142,7 @@
             // AJAX 요청 보내기
             $.ajax({
                 type: "POST",
-                url: "/mypage/changePw",
+                url: "/changePw",
                 data: {
                     currentPw: currentPassword,
                     newPw: newPassword,
@@ -167,10 +158,8 @@
                     console.log("오류가 발생했습니다: " + error);
                 }
             });
-
-
         }
-    })
+    }
 
 
 </script>
